// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthCheck table tests render table 1`] = `
<div>
  <div
    class="healthCheckTable"
  >
    <div
      class="FieldArray--container"
    >
      <div
        class="Layout--horizontal StyledProps--main FieldArray--title"
      >
        <span
          class="FieldArray--text"
        />
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              PROTOCOL
            </th>
            <th>
              PATH
            </th>
            <th>
              PORT
            </th>
            <th>
              TIMEOUT
            </th>
            <th>
              STATUS (from-to)
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="bp3-popover-wrapper selectCell Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="http"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="/"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="80"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="30"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="200-299"
                  />
                </div>
              </div>
            </td>
            <td
              class="FieldArray--deleteColumn"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`HealthCheck table tests update table values 1`] = `
<div>
  <div
    class="healthCheckTable"
  >
    <div
      class="FieldArray--container"
    >
      <div
        class="Layout--horizontal StyledProps--main FieldArray--title"
      >
        <span
          class="FieldArray--text"
        />
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              PROTOCOL
            </th>
            <th>
              PATH
            </th>
            <th>
              PORT
            </th>
            <th>
              TIMEOUT
            </th>
            <th>
              STATUS (from-to)
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="bp3-popover-wrapper selectCell Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="https"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-overlay bp3-overlay-inline"
                >
                  <div
                    class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                  >
                    <div
                      class="bp3-popover bp3-minimal bp3-select-popover"
                      style="transform-origin: center top;"
                    >
                      <div
                        class="bp3-popover-content"
                      >
                        <div>
                          <ul
                            class="bp3-menu"
                          >
                            <li
                              class="Select--menuItem Select--active"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                style="--text-line-clamp: 1;"
                              >
                                http
                              </p>
                            </li>
                            <li
                              class="Select--menuItem"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                style="--text-line-clamp: 1;"
                              >
                                https
                              </p>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="/random"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="81"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="60"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="200-399"
                  />
                </div>
              </div>
            </td>
            <td
              class="FieldArray--deleteColumn"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
